force-app/main/default/objects/Plan_de_Pagos__c/Plan_de_Pagos__c.object-meta.xml
<CustomObject>
    <description>Plan de pagos de una poliza. Agrupa los recibos de cobro bajo un esquema de financiamiento (mensual, quincenal, etc.). Reemplaza gradualmente al objeto Pago__c legacy.</description>
    <label>Plan de Pagoshhh</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Plan de Pagos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planes de Pagos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>