force-app/main/default/objects/Plan_de_Pagos__c/fields/Dias_mora__c.field-meta.xml
<CustomField>
    <fullName>Dias_mora__c</fullName>
    <description>Dias de mora del recibo pendiente mas antiguo. Se actualiza por trigger o batch diario.</description>
    <label>Dias de mora</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>