force-app/main/default/objects/Plan_de_Pagos__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado calculado del plan de pagos. Se actualiza por trigger en base a los recibos hijos.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
                <default>true</default>
                <label>Activo</label>
            </value>
            <value>
                <fullName>En_mora</fullName>
                <label>En mora</label>
            </value>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Pausado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>