force-app/main/default/objects/Plan_de_Pagos__c/fields/Fecha_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inicio__c</fullName>
    <description>Fecha programada del primer recibo del plan. El trigger genera el resto aplicando la frecuencia.</description>
    <label>Fecha de inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>