force-app/main/default/objects/Plan_de_Pagos__c/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <description>Cadencia con la que se generan los recibos del plan.</description>
    <label>Frecuencia</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensual</fullName>
                <default>true</default>
                <label>Mensual</label>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
            <value>
                <fullName>Semanal</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
            <value>
                <fullName>Unico</fullName>
                <label>Pago unico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>