force-app/main/default/objects/Plan_de_Pagos__c/fields/Monto__c.field-meta.xml
<CustomField>
    <fullName>Monto__c</fullName>
    <description>Monto total del plan de pagos (suma prevista de todos los recibos).</description>
    <label>Monto total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>