force-app/main/default/objects/Plan_de_Pagos__c/fields/Num_recibos__c.field-meta.xml
<CustomField>
    <fullName>Num_recibos__c</fullName>
    <description>Cantidad de recibos que se programaran a partir de este plan.</description>
    <label>Numero de recibos</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>