force-app/main/default/objects/Plan_de_Pagos__c/fields/Saldo_pendiente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_pendiente__c</fullName>
    <description>Roll-Up Summary: suma del Saldo__c de todos los recibos (formula que considera pagos parciales). Saldo real que falta cobrar.</description>
    <label>Saldo pendiente</label>
    <summarizedField>Recibo_de_Cobro__c.Saldo__c</summarizedField>
    <summaryForeignKey>Recibo_de_Cobro__c.Plan_de_Pagos__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>