force-app/main/default/objects/Plan_de_Pagos__c/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <description>Relacion Master-Detail a la poliza. Cascade delete: si se elimina la poliza se eliminan todos sus planes y recibos.</description>
    <label>Seguro</label>
    <referenceTo>Seguro__c</referenceTo>
    <relationshipName>Planes_de_Pagos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>