force-app/main/default/objects/Plan_de_Pagos__c/fields/Semaforo_salud__c.field-meta.xml
<CustomField>
    <fullName>Semaforo_salud__c</fullName>
    <description>Semaforo visual de la salud del plan de pagos. Verde=activo/pagado, Amarillo=pausado, Rojo=en mora, Blanco=cancelado.</description>
    <formula>IF(
  ISPICKVAL(Estado__c, &quot;Pagado&quot;),
  &quot;🟢 Pagado&quot;,
  IF(
    ISPICKVAL(Estado__c, &quot;Cancelado&quot;),
    &quot;⚪ Cancelado&quot;,
    IF(
      ISPICKVAL(Estado__c, &quot;En_mora&quot;),
      &quot;🔴 En mora&quot;,
      IF(
        ISPICKVAL(Estado__c, &quot;Pausado&quot;),
        &quot;🟡 Pausado&quot;,
        &quot;🟢 Activo&quot;
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semaforo salud</label>
    <type>Text</type>
</CustomField>