force-app/main/default/objects/Plan_de_Pagos__c/fields/Total_pagado__c.field-meta.xml
<CustomField>
    <fullName>Total_pagado__c</fullName>
    <description>Roll-Up Summary: suma de Monto_pagado de todos los recibos (sin filtro de Estado, para incluir pagos parciales). Dinero efectivamente cobrado del plan.</description>
    <label>Total pagado</label>
    <summarizedField>Recibo_de_Cobro__c.Monto_pagado__c</summarizedField>
    <summaryForeignKey>Recibo_de_Cobro__c.Plan_de_Pagos__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>